<resources>
    <string name="app_name">KotlinCountries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">Country Name</string>
    <string name="country_capital">Country Capital</string>
    <string name="country_region">Country Region</string>
    <string name="country_currency">Country Currency</string>
    <string name="country_language">Country Language</string>
    <string name="region">Region</string>
    <string name="name">Name</string>
    <string name="error_try_again">Error! Try Again</string>
</resources>