<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CountryFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/countryImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"
            android:minHeight="200dp"
            android:src="@mipmap/ic_launcher"
            android:paddingTop="10dp">

        </ImageView>

        <TextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryImage"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/country_name"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/countryCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryName"
            android:text="@string/country_capital"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_margin="7dp"/>


        <TextView
            android:id="@+id/countryRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryCapital"
            android:text="@string/country_region"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_margin="7dp"/>


        <TextView
            android:id="@+id/countryCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryRegion"
            android:text="@string/country_currency"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_margin="7dp"/>


        <TextView
            android:id="@+id/countryLangueage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryCurrency"
            android:text="@string/country_language"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_margin="7dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
